apps/kube/angelscript/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: angelscript-service
    namespace: angelscript
    labels:
        app: angelscript
        kbve.com/category: application
        kbve.com/stack: core
        kbve.com/managed-by: argocd
spec:
    type: ClusterIP
    selector:
        app: angelscript
    ports:
        - name: game-udp
          port: 7777
          targetPort: 7777
          protocol: UDP
        - name: game-tcp
          port: 7777
          targetPort: 7777
          protocol: TCP
        - name: query
          port: 27015
          targetPort: 27015
          protocol: UDP
        - name: beacon
          port: 15000
          targetPort: 15000
          protocol: UDP
