apps/kube/angelscript/manifest/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: angelscript-network
    namespace: angelscript
    labels:
        app: angelscript
spec:
    podSelector:
        matchLabels:
            app: angelscript
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - ports:
              - port: 7777
                protocol: UDP
              - port: 7777
                protocol: TCP
              - port: 27015
                protocol: UDP
              - port: 15000
                protocol: UDP
    egress:
        - ports:
              - port: 53
                protocol: UDP
              - port: 53
                protocol: TCP
        - ports:
              - port: 443
                protocol: TCP
        - ports:
              - port: 80
                protocol: TCP
